# executive-ai-assistant

./: .gitignore  README.md  langgraph.json  pyproject.toml
eaia/: cron_graph.py  gmail.py  reflection_graphs.py  schemas.py
eaia/main/: config.py  config.yaml  draft_response.py  find_meeting_time.py  graph.py  human_inbox.py  rewrite.py  triage.py
scripts/: run_ingest.py  setup_cron.py  setup_gmail.py
